playground/leg/test.leg
%{
//#define YYSTYPE Node *
#include <stdio.h>

//#define YY_DEBUG

//#include "visitor.h"

//int yylex (void);
//void yyerror (char const *);

//using namespace std;

int source_line = 0;
%}



program 		= lines	- EOF						{printf("!!!done on line %d!\n", source_line);}

lines		= line (nl line?)*					{printf("!!! lines\n");}

line			= - < [a-z]+ > -						{printf("!!! line: %s\n", yytext);}
			| < [^\n]* >							{printf("!!!error on line %d: %s\n", source_line, yytext);}

-			= [ \t]*
--			= - (nl -)?

nl			= "\n"								{printf("!!! nl\n"); ++source_line;}

EOF			= !.

%%

main ()
	{
	if (! yyparse())
		printf("error on line %d\n", source_line);
	else
		printf("parsed %d lines\n", source_line);
	}
