playground/leg/test.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 7

//#define YYSTYPE Node *
#include <stdio.h>

//#define YY_DEBUG

//#include "visitor.h"

//int yylex (void);
//void yyerror (char const *);

//using namespace std;

int source_line = 0;

#ifdef __cplusplus 
#define __MALLOC(type,num) (new type[(num)])
#else
#define __MALLOC(type,num) (type *)malloc(sizeof(type)*(num))
#endif
#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= (char*)realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= (yythunk*)realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= (char*)realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy___(); /* 7 */
YY_RULE(int) yy_nl(); /* 6 */
YY_RULE(int) yy_line(); /* 5 */
YY_RULE(int) yy_EOF(); /* 4 */
YY_RULE(int) yy__(); /* 3 */
YY_RULE(int) yy_lines(); /* 2 */
YY_RULE(int) yy_program(); /* 1 */

YY_ACTION(void) yy_1_nl(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_nl\n"));
  printf("!!! nl\n"); ++source_line;;
}
YY_ACTION(void) yy_2_line(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_line\n"));
  printf("!!!error on line %d: %s\n", source_line, yytext);;
}
YY_ACTION(void) yy_1_line(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_line\n"));
  printf("!!! line: %s\n", yytext);;
}
YY_ACTION(void) yy_1_lines(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_lines\n"));
  printf("!!! lines\n");;
}
YY_ACTION(void) yy_1_program(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_program\n"));
  printf("!!!done on line %d!\n", source_line);;
}

YY_RULE(int) yy___()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "__"));  if (!yy__()) goto l1;
  {  int yypos2= yypos, yythunkpos2= yythunkpos;  if (!yy_nl()) goto l2;  if (!yy__()) goto l2;  goto l3;
  l2:;	  yypos= yypos2; yythunkpos= yythunkpos2;
  }
  l3:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "__", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "__", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_nl()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "nl"));  if (!yymatchChar('\n')) goto l4;  yyDo(yy_1_nl, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "nl", yybuf+yypos));
  return 1;
  l4:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "nl", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_line()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "line"));
  {  int yypos6= yypos, yythunkpos6= yythunkpos;  if (!yy__()) goto l7;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l7;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\000\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;
  l8:;	
  {  int yypos9= yypos, yythunkpos9= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\000\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l9;  goto l8;
  l9:;	  yypos= yypos9; yythunkpos= yythunkpos9;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l7;  if (!yy__()) goto l7;  yyDo(yy_1_line, yybegin, yyend);  goto l6;
  l7:;	  yypos= yypos6; yythunkpos= yythunkpos6;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l5;
  l10:;	
  {  int yypos11= yypos, yythunkpos11= yythunkpos;  if (!yymatchClass((unsigned char *)"\377\373\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l11;  goto l10;
  l11:;	  yypos= yypos11; yythunkpos= yythunkpos11;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l5;  yyDo(yy_2_line, yybegin, yyend);
  }
  l6:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "line", yybuf+yypos));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "line", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_EOF()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "EOF"));
  {  int yypos13= yypos, yythunkpos13= yythunkpos;  if (!yymatchDot()) goto l13;  goto l12;
  l13:;	  yypos= yypos13; yythunkpos= yythunkpos13;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "EOF", yybuf+yypos));
  return 1;
  l12:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOF", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy__()
{
  yyprintf((stderr, "%s\n", "_"));
  l15:;	
  {  int yypos16= yypos, yythunkpos16= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l16;  goto l15;
  l16:;	  yypos= yypos16; yythunkpos= yythunkpos16;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yybuf+yypos));
  return 1;
}
YY_RULE(int) yy_lines()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "lines"));  if (!yy_line()) goto l17;
  l18:;	
  {  int yypos19= yypos, yythunkpos19= yythunkpos;  if (!yy_nl()) goto l19;
  {  int yypos20= yypos, yythunkpos20= yythunkpos;  if (!yy_line()) goto l20;  goto l21;
  l20:;	  yypos= yypos20; yythunkpos= yythunkpos20;
  }
  l21:;	  goto l18;
  l19:;	  yypos= yypos19; yythunkpos= yythunkpos19;
  }  yyDo(yy_1_lines, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "lines", yybuf+yypos));
  return 1;
  l17:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "lines", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_program()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "program"));  if (!yy_lines()) goto l22;  if (!yy__()) goto l22;  if (!yy_EOF()) goto l22;  yyDo(yy_1_program, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "program", yybuf+yypos));
  return 1;
  l22:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "program", yybuf+yypos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)();

YY_PARSE(int) YYPARSEFROM(yyrule yystart)
{
  int yyok;
  if (!yybuflen)
    {
      yybuflen= 1024;
      yybuf= (char*)malloc(sizeof(char)* yybuflen);
      yytextlen= 1024;
      yytext= (char*)malloc(sizeof(char)* yytextlen);
      yythunkslen= 32;
      yythunks= (yythunk*)malloc(sizeof(yythunk)* yythunkslen);
      yyvalslen= 70;
      yyvals= __MALLOC(YYSTYPE, yyvalslen);
      yybegin= yyend= yypos= yylimit= yythunkpos= 0;
    }
  yybegin= yyend= yypos;
  yythunkpos= 0;
  yyval= yyvals;
  yyok= yystart();
  if (yyok) yyDone();
  yyCommit();
  return yyok;
  (void)yyrefill;
  (void)yymatchDot;
  (void)yymatchChar;
  (void)yymatchString;
  (void)yymatchClass;
  (void)yyDo;
  (void)yyText;
  (void)yyDone;
  (void)yyCommit;
  (void)yyAccept;
  (void)yyPush;
  (void)yyPop;
  (void)yySet;
  (void)yytextmax;
}

YY_PARSE(int) YYPARSE(void)
{
  return YYPARSEFROM(yy_program);
}

#endif


main ()
	{
	if (! yyparse())
		printf("error on line %d\n", source_line);
	else
		printf("parsed %d lines\n", source_line);
	}


